crates/replique/tests/snapshots/corpus__bad_commands.snap
---
source: crates/replique/tests/corpus.rs
expression: "render(& src, & parsed)"
---
== nodes ==
node start
  line Alice "un" @3:1 "Alice: un"
  line Alice "deux" @5:1 "Alice: deux"
  line Alice "trois" @7:1 "Alice: trois"
  command play [] @8:4 "play(1..2)"
  line Alice "quatre" @9:1 "Alice: quatre"
  command play ["1"] @10:4 "play(1)"
  line Alice "cinq" @11:1 "Alice: cinq"
  line Alice "six" @13:1 "Alice: six"
  line Alice "sept" @15:1 "Alice: sept"
  command play ["\"a\" - 1"] @16:4 "play(\"a\" - 1)"
  line Alice "huit" @17:1 "Alice: huit"
  line Alice "neuf" @19:1 "Alice: neuf"
  line Alice "dix" @21:1 "Alice: dix"
  line Alice "onze" @23:1 "Alice: onze"

== diagnostics ==
error empty-command @2:1 ">>"
error invalid-command-name @4:4 "2fast"
error unclosed-call @6:4 "play("
error invalid-number @8:9 "1..2"
warning trailing-after-command @10:12 "oups"
error expected-command @12:4 "fade_in"
error expected-command @14:4 "play"
error invalid-binary-operands @16:9 "\"a\" - 1"
  label string @16:9 "\"a\""
  label int @16:15 "1"
error reserved-command-name @18:4 "await"
error reserved-command-name @20:4 "await"
error invalid-command-name @22:10 "2fast"
