crates/replique/tests/snapshots/corpus__bad_names.snap
---
source: crates/replique/tests/corpus.rs
expression: "render(& src, & parsed)"
---
== nodes ==
node 
  line Alice "Salut" @2:1 "Alice: Salut"
node 2fast

== diagnostics ==
error empty-node-name @1:3 ""
error invalid-node-name @5:4 "2fast"
error empty-jump @6:1 "=>"
error invalid-node-name @7:4 "3furious"
warning empty-node @5:1 ":= 2fast"
